--- a/index.html
+++ b/index.html
@@ -5,31 +5,58 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Foodie's Paradise</title>
   <style>
-    body {margin:0;font-family:Arial,sans-serif;background:#fafafa;color:#333;}
-    header {background:url('https://via.placeholder.com/1200x400?text=Restaurant+Banner') center/cover no-repeat;
-            height:300px;display:flex;flex-direction:column;justify-content:center;align-items:center;color:#fff;text-shadow:2px 2px 5px #000;}
-    header h1 {font-size:3rem;margin:0;}
-    header p {font-size:1.3rem;}
-    .products {display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:20px;padding:40px;}
-    .card {background:#fff;border-radius:12px;box-shadow:0 4px 10px rgba(0,0,0,0.1);overflow:hidden;transition:transform 0.2s;}
-    .card:hover {transform:translateY(-5px);}
-    .card img {width:100%;height:180px;object-fit:cover;}
-    .card-content {padding:15px;text-align:center;}
-    .card-content h3 {margin:10px 0;font-size:1.2rem;}
-    .price {color:#0077ff;font-weight:bold;font-size:1.1rem;}
-    button {margin-top:10px;background:#0077ff;color:#fff;border:none;padding:10px 18px;border-radius:6px;cursor:pointer;transition:0.3s;}
-    button:hover {background:#005ec4;}
+    body {margin:0;font-family:Arial,sans-serif;background:#fff3f0;color:#333;}
+    header {
+      background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),
+                  url('https://images.unsplash.com/photo-1504674900247-0877df9cc836?auto=format&fit=crop&w=1200&q=80')
+                  center/cover no-repeat;
+      height:320px;display:flex;flex-direction:column;justify-content:center;align-items:center;
+      color:#fff;text-align:center;text-shadow:2px 2px 6px #000;
+    }
+    header h1 {font-size:3.2rem;margin:0;}
+    header p {font-size:1.3rem;margin-top:10px;}
+    .products {
+      display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+      gap:25px;padding:50px;
+    }
+    .card {
+      background: #fff;
+      border-radius:14px;
+      box-shadow:0 6px 15px rgba(0,0,0,0.1);
+      overflow:hidden;
+      transition:transform 0.3s, box-shadow 0.3s;
+    }
+    .card:hover {
+      transform:translateY(-8px);
+      box-shadow:0 10px 25px rgba(0,0,0,0.15);
+    }
+    .card img {
+      width:100%;height:200px;object-fit:cover;
+    }
+    .card-content {padding:18px;text-align:center;}
+    .card-content h3 {margin:10px 0;font-size:1.3rem;color:#222;}
+    .card-content p {margin:6px 0;color:#555;}
+    .price {color:#e63946;font-weight:bold;font-size:1.1rem;}
+    button {
+      margin-top:12px;
+      background:linear-gradient(45deg, #ff6b6b, #ffcc70);
+      color:#fff;border:none;padding:10px 20px;
+      border-radius:25px;cursor:pointer;
+      font-weight:bold;font-size:1rem;
+      transition:0.3s;
+    }
+    button:hover {opacity:0.9;}
   </style>
 </head>
 <body>
   <header>
     <h1>Foodie's Paradise</h1>
-    <p>Delicious meals at your fingertips</p>
+    <p>Where every bite is a delight 🍴</p>
   </header>
 
   <section class="products">
     <div class="card">
-      <img src="https://via.placeholder.com/300x200?text=Cake" alt="Cake">
+      <img src="https://images.unsplash.com/photo-1605478372453-1e4a3b1e3f3e?auto=format&fit=crop&w=600&q=80" alt="Cake">
       <div class="card-content">
         <h3>Chocolate Cake</h3>
         <p>Rich & creamy delight.</p>
@@ -39,7 +66,7 @@
     </div>
 
     <div class="card">
-      <img src="https://via.placeholder.com/300x200?text=Biryani" alt="Biryani">
+      <img src="https://images.unsplash.com/photo-1627308595187-4c4f1f88a9f4?auto=format&fit=crop&w=600&q=80" alt="Biryani">
       <div class="card-content">
         <h3>Chicken Biryani</h3>
         <p>Spicy & flavorful rice.</p>
@@ -49,7 +76,7 @@
     </div>
 
     <div class="card">
-      <img src="https://via.placeholder.com/300x200?text=Milkshake" alt="Milkshake">
+      <img src="https://images.unsplash.com/photo-1581382575285-c0d7eab3cd1d?auto=format&fit=crop&w=600&q=80" alt="Milkshake">
       <div class="card-content">
         <h3>Strawberry Milkshake</h3>
         <p>Refreshing and creamy.</p>
@@ -59,7 +86,7 @@
     </div>
 
     <div class="card">
-      <img src="https://via.placeholder.com/300x200?text=Icecream" alt="Ice Cream">
+      <img src="https://images.unsplash.com/photo-1505253716362-afaea1d3d1af?auto=format&fit=crop&w=600&q=80" alt="Ice Cream">
       <div class="card-content">
         <h3>Vanilla Ice Cream</h3>
         <p>Classic frozen treat.</p>
@@ -69,7 +96,7 @@
     </div>
 
     <div class="card">
-      <img src="https://via.placeholder.com/300x200?text=Burger" alt="Burger">
+      <img src="https://images.unsplash.com/photo-1550547660-d9450f859349?auto=format&fit=crop&w=600&q=80" alt="Burger">
       <div class="card-content">
         <h3>Cheese Burger</h3>
         <p>Juicy & cheesy.</p>
@@ -79,7 +106,7 @@
     </div>
 
     <div class="card">
-      <img src="https://via.placeholder.com/300x200?text=Pizza" alt="Pizza">
+      <img src="https://images.unsplash.com/photo-1548365328-9d0f8c9f8b91?auto=format&fit=crop&w=600&q=80" alt="Pizza">
       <div class="card-content">
         <h3>Pepperoni Pizza</h3>
         <p>Hot and cheesy slice.</p>
