--- a/index.html
+++ b/index.html
@@ -3,65 +3,112 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Foodie's Paradise</title>
+  <title>AHA</title>
   <style>
-    body {margin:0;font-family:Arial,sans-serif;background:#fff3f0;color:#333;}
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #fffaf6;
+      color: #333;
+    }
+
+    /* Hero Banner */
     header {
       background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),
-                  url('https://images.unsplash.com/photo-1504674900247-0877df9cc836?auto=format&fit=crop&w=1200&q=80')
+                  url('https://images.unsplash.com/photo-1600891963935-c4c7b4c8e0b1?auto=format&fit=crop&w=1200&q=80')
                   center/cover no-repeat;
-      height:320px;display:flex;flex-direction:column;justify-content:center;align-items:center;
-      color:#fff;text-align:center;text-shadow:2px 2px 6px #000;
+      height: 350px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      color: #fff;
+      text-align: center;
+      text-shadow: 2px 2px 6px #000;
     }
-    header h1 {font-size:3.2rem;margin:0;}
-    header p {font-size:1.3rem;margin-top:10px;}
+    header h1 {
+      font-size: 3.2rem;
+      margin: 0;
+    }
+    header p {
+      font-size: 1.3rem;
+      margin-top: 10px;
+    }
+
+    /* Product Section */
     .products {
-      display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-      gap:25px;padding:50px;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 25px;
+      padding: 50px;
     }
     .card {
       background: #fff;
-      border-radius:14px;
-      box-shadow:0 6px 15px rgba(0,0,0,0.1);
-      overflow:hidden;
-      transition:transform 0.3s, box-shadow 0.3s;
+      border-radius: 14px;
+      box-shadow: 0 6px 15px rgba(0,0,0,0.1);
+      overflow: hidden;
+      transition: transform 0.3s, box-shadow 0.3s;
     }
     .card:hover {
-      transform:translateY(-8px);
-      box-shadow:0 10px 25px rgba(0,0,0,0.15);
+      transform: translateY(-8px);
+      box-shadow: 0 10px 25px rgba(0,0,0,0.15);
     }
     .card img {
-      width:100%;height:200px;object-fit:cover;
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
     }
-    .card-content {padding:18px;text-align:center;}
-    .card-content h3 {margin:10px 0;font-size:1.3rem;color:#222;}
-    .card-content p {margin:6px 0;color:#555;}
-    .price {color:#e63946;font-weight:bold;font-size:1.1rem;}
+    .card-content {
+      padding: 18px;
+      text-align: center;
+    }
+    .card-content h3 {
+      margin: 10px 0;
+      font-size: 1.3rem;
+      color: #222;
+    }
+    .card-content p {
+      margin: 6px 0;
+      color: #555;
+    }
+    .price {
+      color: #e63946;
+      font-weight: bold;
+      font-size: 1.1rem;
+    }
     button {
-      margin-top:12px;
-      background:linear-gradient(45deg, #ff6b6b, #ffcc70);
-      color:#fff;border:none;padding:10px 20px;
-      border-radius:25px;cursor:pointer;
-      font-weight:bold;font-size:1rem;
-      transition:0.3s;
+      margin-top: 12px;
+      background: linear-gradient(45deg, #ff6b6b, #ffcc70);
+      color: #fff;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 25px;
+      cursor: pointer;
+      font-weight: bold;
+      font-size: 1rem;
+      transition: 0.3s;
     }
-    button:hover {opacity:0.9;}
+    button:hover {
+      opacity: 0.9;
+    }
   </style>
 </head>
 <body>
+  <!-- Hero Banner -->
   <header>
-    <h1>Foodie's Paradise</h1>
-    <p>Where every bite is a delight 🍴</p>
+    <h1>AHA</h1>
+    <p>Delicious food, made with love 🍴</p>
   </header>
 
+  <!-- Product Section -->
   <section class="products">
     <div class="card">
       <img src="https://images.unsplash.com/photo-1605478372453-1e4a3b1e3f3e?auto=format&fit=crop&w=600&q=80" alt="Cake">
       <div class="card-content">
         <h3>Chocolate Cake</h3>
-        <p>Rich & creamy delight.</p>
-        <p class="price">$5</p>
-        <button onclick="buy('Chocolate Cake - $5')">Buy Now</button>
+        <p>Rich & creamy delight for every occasion.</p>
+        <p class="price">₹450</p>
+        <button onclick="buy('Chocolate Cake - ₹450')">Buy Now</button>
       </div>
     </div>
 
@@ -69,9 +116,9 @@
       <img src="https://images.unsplash.com/photo-1627308595187-4c4f1f88a9f4?auto=format&fit=crop&w=600&q=80" alt="Biryani">
       <div class="card-content">
         <h3>Chicken Biryani</h3>
-        <p>Spicy & flavorful rice.</p>
-        <p class="price">$8</p>
-        <button onclick="buy('Chicken Biryani - $8')">Buy Now</button>
+        <p>Aromatic spices with tender chicken.</p>
+        <p class="price">₹250</p>
+        <button onclick="buy('Chicken Biryani - ₹250')">Buy Now</button>
       </div>
     </div>
 
@@ -79,9 +126,9 @@
       <img src="https://images.unsplash.com/photo-1581382575285-c0d7eab3cd1d?auto=format&fit=crop&w=600&q=80" alt="Milkshake">
       <div class="card-content">
         <h3>Strawberry Milkshake</h3>
-        <p>Refreshing and creamy.</p>
-        <p class="price">$4</p>
-        <button onclick="buy('Strawberry Milkshake - $4')">Buy Now</button>
+        <p>Sweet, creamy, and refreshing.</p>
+        <p class="price">₹180</p>
+        <button onclick="buy('Strawberry Milkshake - ₹180')">Buy Now</button>
       </div>
     </div>
 
@@ -89,9 +136,9 @@
       <img src="https://images.unsplash.com/photo-1505253716362-afaea1d3d1af?auto=format&fit=crop&w=600&q=80" alt="Ice Cream">
       <div class="card-content">
         <h3>Vanilla Ice Cream</h3>
-        <p>Classic frozen treat.</p>
-        <p class="price">$3</p>
-        <button onclick="buy('Vanilla Ice Cream - $3')">Buy Now</button>
+        <p>Classic creamy frozen dessert.</p>
+        <p class="price">₹120</p>
+        <button onclick="buy('Vanilla Ice Cream - ₹120')">Buy Now</button>
       </div>
     </div>
 
@@ -99,9 +146,9 @@
       <img src="https://images.unsplash.com/photo-1550547660-d9450f859349?auto=format&fit=crop&w=600&q=80" alt="Burger">
       <div class="card-content">
         <h3>Cheese Burger</h3>
-        <p>Juicy & cheesy.</p>
-        <p class="price">$6</p>
-        <button onclick="buy('Cheese Burger - $6')">Buy Now</button>
+        <p>Loaded with cheese & juicy patties.</p>
+        <p class="price">₹200</p>
+        <button onclick="buy('Cheese Burger - ₹200')">Buy Now</button>
       </div>
     </div>
 
@@ -109,9 +156,9 @@
       <img src="https://images.unsplash.com/photo-1548365328-9d0f8c9f8b91?auto=format&fit=crop&w=600&q=80" alt="Pizza">
       <div class="card-content">
         <h3>Pepperoni Pizza</h3>
-        <p>Hot and cheesy slice.</p>
-        <p class="price">$10</p>
-        <button onclick="buy('Pepperoni Pizza - $10')">Buy Now</button>
+        <p>Hot, cheesy, and loaded with toppings.</p>
+        <p class="price">₹600</p>
+        <button onclick="buy('Pepperoni Pizza - ₹600')">Buy Now</button>
       </div>
     </div>
   </section>
