--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     /* Hero Banner */
     header {
       background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),
-                  url('https://images.unsplash.com/photo-1600891963935-c4c7b4c8e0b1?auto=format&fit=crop&w=1200&q=80')
+                  url('https://cdn.pixabay.com/photo/2017/03/07/20/19/restaurant-2124352_1280.jpg')
                   center/cover no-repeat;
       height: 350px;
       display: flex;
@@ -103,7 +103,7 @@
   <!-- Product Section -->
   <section class="products">
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1605478372453-1e4a3b1e3f3e?auto=format&fit=crop&w=600&q=80" alt="Cake">
+      <img src="https://cdn.pixabay.com/photo/2020/03/04/12/21/cake-4905135_1280.jpg" alt="Cake">
       <div class="card-content">
         <h3>Chocolate Cake</h3>
         <p>Rich & creamy delight for every occasion.</p>
@@ -113,7 +113,7 @@
     </div>
 
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1627308595187-4c4f1f88a9f4?auto=format&fit=crop&w=600&q=80" alt="Biryani">
+      <img src="https://cdn.pixabay.com/photo/2017/12/09/08/18/biryani-3007393_1280.jpg" alt="Biryani">
       <div class="card-content">
         <h3>Chicken Biryani</h3>
         <p>Aromatic spices with tender chicken.</p>
@@ -123,7 +123,7 @@
     </div>
 
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1581382575285-c0d7eab3cd1d?auto=format&fit=crop&w=600&q=80" alt="Milkshake">
+      <img src="https://cdn.pixabay.com/photo/2016/03/05/22/46/milkshake-1238616_1280.jpg" alt="Milkshake">
       <div class="card-content">
         <h3>Strawberry Milkshake</h3>
         <p>Sweet, creamy, and refreshing.</p>
@@ -133,7 +133,7 @@
     </div>
 
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1505253716362-afaea1d3d1af?auto=format&fit=crop&w=600&q=80" alt="Ice Cream">
+      <img src="https://cdn.pixabay.com/photo/2017/08/06/06/07/ice-cream-2588541_1280.jpg" alt="Ice Cream">
       <div class="card-content">
         <h3>Vanilla Ice Cream</h3>
         <p>Classic creamy frozen dessert.</p>
@@ -143,7 +143,7 @@
     </div>
 
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1550547660-d9450f859349?auto=format&fit=crop&w=600&q=80" alt="Burger">
+      <img src="https://cdn.pixabay.com/photo/2016/03/05/19/02/hamburger-1238246_1280.jpg" alt="Burger">
       <div class="card-content">
         <h3>Cheese Burger</h3>
         <p>Loaded with cheese & juicy patties.</p>
@@ -153,7 +153,7 @@
     </div>
 
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1548365328-9d0f8c9f8b91?auto=format&fit=crop&w=600&q=80" alt="Pizza">
+      <img src="https://cdn.pixabay.com/photo/2017/12/09/08/18/pizza-3007395_1280.jpg" alt="Pizza">
       <div class="card-content">
         <h3>Pepperoni Pizza</h3>
         <p>Hot, cheesy, and loaded with toppings.</p>
