--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AHA</title>
+  <title>Foodie's Paradise</title>
   <style>
     body {
       margin: 0;
@@ -15,7 +15,7 @@
     /* Hero Banner */
     header {
       background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),
-                  url('https://cdn.pixabay.com/photo/2017/03/07/20/19/restaurant-2124352_1280.jpg')
+                  url('https://cdn.pixabay.com/photo/2017/08/10/07/16/restaurant-2619904_1280.jpg')
                   center/cover no-repeat;
       height: 350px;
       display: flex;
@@ -96,14 +96,14 @@
 <body>
   <!-- Hero Banner -->
   <header>
-    <h1>AHA</h1>
+    <h1>Foodie's Paradise</h1>
     <p>Delicious food, made with love 🍴</p>
   </header>
 
   <!-- Product Section -->
   <section class="products">
     <div class="card">
-      <img src="https://cdn.pixabay.com/photo/2020/03/04/12/21/cake-4905135_1280.jpg" alt="Cake">
+      <img src="https://cdn.pixabay.com/photo/2016/11/29/02/12/cakes-1868544_1280.jpg" alt="Cake">
       <div class="card-content">
         <h3>Chocolate Cake</h3>
         <p>Rich & creamy delight for every occasion.</p>
@@ -113,7 +113,7 @@
     </div>
 
     <div class="card">
-      <img src="https://cdn.pixabay.com/photo/2017/12/09/08/18/biryani-3007393_1280.jpg" alt="Biryani">
+      <img src="https://cdn.pixabay.com/photo/2018/05/01/15/57/food-3365368_1280.jpg" alt="Biryani">
       <div class="card-content">
         <h3>Chicken Biryani</h3>
         <p>Aromatic spices with tender chicken.</p>
@@ -123,7 +123,7 @@
     </div>
 
     <div class="card">
-      <img src="https://cdn.pixabay.com/photo/2016/03/05/22/46/milkshake-1238616_1280.jpg" alt="Milkshake">
+      <img src="https://cdn.pixabay.com/photo/2017/12/10/14/47/milkshake-3019141_1280.jpg" alt="Milkshake">
       <div class="card-content">
         <h3>Strawberry Milkshake</h3>
         <p>Sweet, creamy, and refreshing.</p>
@@ -133,7 +133,7 @@
     </div>
 
     <div class="card">
-      <img src="https://cdn.pixabay.com/photo/2017/08/06/06/07/ice-cream-2588541_1280.jpg" alt="Ice Cream">
+      <img src="https://cdn.pixabay.com/photo/2017/03/27/14/56/ice-cream-2179314_1280.jpg" alt="Ice Cream">
       <div class="card-content">
         <h3>Vanilla Ice Cream</h3>
         <p>Classic creamy frozen dessert.</p>
@@ -143,7 +143,7 @@
     </div>
 
     <div class="card">
-      <img src="https://cdn.pixabay.com/photo/2016/03/05/19/02/hamburger-1238246_1280.jpg" alt="Burger">
+      <img src="https://cdn.pixabay.com/photo/2014/10/23/18/05/burger-500054_1280.jpg" alt="Burger">
       <div class="card-content">
         <h3>Cheese Burger</h3>
         <p>Loaded with cheese & juicy patties.</p>
@@ -153,7 +153,7 @@
     </div>
 
     <div class="card">
-      <img src="https://cdn.pixabay.com/photo/2017/12/09/08/18/pizza-3007395_1280.jpg" alt="Pizza">
+      <img src="https://cdn.pixabay.com/photo/2017/02/08/18/35/food-2041707_1280.jpg" alt="Pizza">
       <div class="card-content">
         <h3>Pepperoni Pizza</h3>
         <p>Hot, cheesy, and loaded with toppings.</p>
