--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   <!-- Product Section -->
   <section class="products">
     <div class="card">
-      <img src="https://cdn.pixabay.com/photo/2016/11/29/02/12/cakes-1868544_1280.jpg">
+      <img src="https://images.pexels.com/photos/291528/pexels-photo-291528.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940">
       <div class="card-content">
         <h3>Chocolate Cake</h3>
         <p>Rich & creamy delight for every occasion.</p>
@@ -113,7 +113,7 @@
     </div>
 
     <div class="card">
-      <img src="https://cdn.pixabay.com/photo/2018/05/25/08/14/biryani-3427097_1280.jpg">
+      <img src="https://images.pexels.com/photos/1624487/pexels-photo-1624487.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940">
       <div class="card-content">
         <h3>Chicken Biryani</h3>
         <p>Aromatic spices with tender chicken.</p>
@@ -123,7 +123,7 @@
     </div>
 
     <div class="card">
-      <img src="https://cdn.pixabay.com/photo/2017/01/06/19/15/milkshake-1954537_1280.jpg">
+      <img src="https://images.pexels.com/photos/414262/pexels-photo-414262.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940">
       <div class="card-content">
         <h3>Strawberry Milkshake</h3>
         <p>Sweet, creamy, and refreshing.</p>
@@ -133,7 +133,7 @@
     </div>
 
     <div class="card">
-      <img src="https://cdn.pixabay.com/photo/2017/03/27/13/36/ice-cream-2179092_1280.jpg">
+      <img src="https://images.pexels.com/photos/1352278/pexels-photo-1352278.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940">
       <div class="card-content">
         <h3>Vanilla Ice Cream</h3>
         <p>Classic creamy frozen dessert.</p>
