--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     /* Hero Banner */
     header {
       background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),
-                  url('https://cdn.pixabay.com/photo/2017/08/10/07/16/restaurant-2619904_1280.jpg')
+                  url('https://images.pexels.com/photos/24740177/pexels-photo-24740177.jpeg')
                   center/cover no-repeat;
       height: 350px;
       display: flex;
