--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-T8Q534FL');</script>
 <!-- End Google Tag Manager -->
+ 
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JFXYTNRETC"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L3NKGMFYTH"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-JFXYTNRETC', { 'debug_mode':true });
+  gtag('config', 'G-L3NKGMFYTH');
 </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
