--- a/payment.html
+++ b/payment.html
@@ -10,13 +10,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Google Tag Manager -->
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-8ZWFRF8H20"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-71S3Q8K24N"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-8ZWFRF8H20');
+  gtag('config', 'G-71S3Q8K24N');
 </script>
   
   <meta charset="UTF-8">
